Fix spacing for projects page

--- a/src/Comps/Projects/Projects.module.scss
+++ b/src/Comps/Projects/Projects.module.scss
@@ -45,7 +45,6 @@
 .techStackTags {
   display: flex;
   padding-bottom: 10px;
-  padding-top: 10px;
   flex-wrap: wrap;
 }
 
@@ -59,6 +58,7 @@
   background-color: rgb(252, 106, 43);
   border-radius: 20px;
   margin-right: 8px;
+  margin-top: 10px;
   padding: 4px 14px 6px 14px;
   font-weight: bold;
   font-size: 0.8rem;
@@ -126,7 +126,8 @@
 .card {
   margin: 14px;
   height: 250px;
-  background-size: 100%;
+  background-size: cover;
+  background-position: center top;
   position: relative;
 }
 
@@ -203,10 +204,17 @@
   }
 }
 
+.infoContainer {
+  padding-bottom: 20px;
+}
+
 .desc {
   padding: 20px;
   padding-top: 0px;
   z-index: -1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 
   p {
     color: #434343;
